<resources>
    <string name="app_name">CISSGIN</string>

    <string name="Procedure">Procedure</string>
    <string name="Keynote">Keynote</string>
    <string name="Schedule">Schedule</string>
    <string name="Home">Home</string>
    <string name="Map">Map</string>
    <string name="More">More</string>
    <string name="title_activity_ye">ye</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
